tests/src/tests/fail/no-macro-args.stderr
error: async_generic can only take a async_signature argument
 --> src/tests/fail/no-macro-args.rs:3:1
  |
3 | #[async_generic(Send)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `async_generic` (in Nightly builds, run with -Z macro-backtrace for more info)
